--- a/assets/style.css
+++ b/assets/style.css
@@ -9,18 +9,8 @@
     display: none;
 }
 
-/* ::-webkit-scrollbar {
-    width: 20px;
+@layer components {
+  .select-container {
+    @apply text-black
+  }
 }
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #A8BBBF;
-    border-radius: 25px;
-    border: 5px solid transparent;
-    background-clip: content-box;
-}
-::-webkit-scrollbar-thumb:hover {
-    background-color: #97AAAD;
-} */
