--- a/assets/style.css
+++ b/assets/style.css
@@ -6,11 +6,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap");
 
 .team-cards ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 @layer components {
   .select-container {
-    @apply text-black
+    @apply text-black text-sm bg-base-100;
   }
 }
